--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-filter": "^6.0.0",
+    "gulp-folder-index": "0.0.3",
     "gulp-htmlhint": "^3.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-modify-file": "^1.0.1",
