--- a/package.json
+++ b/package.json
@@ -1,46 +1,38 @@
 {
-  "name": "crashinvaders-site",
+  "name": "webpack-test0",
   "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "browserify": "^16.5.1",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-filter": "^6.0.0",
-    "gulp-folder-index": "0.0.3",
-    "gulp-htmlhint": "^3.0.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-modify-file": "^1.0.1",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-s3-upload": "^1.7.3",
-    "gulp-sass": "^4.1.0",
-    "gulp-shorthand": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-stylelint": "^13.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
-    "node-sass": "^4.14.0",
-    "stylelint": "^13.3.3",
-    "stylelint-config-htmlacademy": "^0.1.4",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-config-standard-scss": "^1.1.0",
-    "stylelint-scss": "^3.17.1",
-    "tsify": "^4.0.1",
-    "typescript": "^3.8.3",
-    "vinyl": "^2.2.0",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.1",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "image-webpack-loader": "^6.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@types/aos": "^3.0.3",
+    "aos": "^2.3.4"
   },
   "scripts": {
-    "start": "gulp default",
-    "stylelint:fix": "stylelint ./src/styles/**/*.scss --fix --syntax scss",
-    "deploy": "aws s3 sync build s3://crashinvaders.com/ --profile crashinvaders"
-  },
-  "dependencies": {}
+    "build:dev": "webpack",
+    "build:release": "webpack --env.release",
+    "build": "npm run build:dev",
+    "start": "Webpack-dev-server --open 127.0.0.1:3000",
+    "watch": "webpack --watch",
+    "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders"
+  }
 }
