--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
@@ -33,6 +34,7 @@
     "build": "npm run build:dev",
     "start": "Webpack-dev-server --open 127.0.0.1:3000",
     "watch": "webpack --watch",
-    "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders"
+    "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders --metadata-directive REPLACE --acl public-read --cache-control max-age=604800,public"
+
   }
 }
