--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
@@ -34,7 +36,8 @@
     "build": "npm run build:dev",
     "start": "Webpack-dev-server --open 127.0.0.1:3000",
     "watch": "webpack --watch",
-    "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders --metadata-directive REPLACE --acl public-read --cache-control max-age=604800,public"
+    "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders --metadata-directive REPLACE --acl public-read --cache-control max-age=604800,public",
+    "pug:watch": "pug -w ./src/pug -o ./src/pug -P"
 
   }
 }
