--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "webpack-test0",
-  "version": "1.0.0",
-  "description": "",
+  "name": "crashinvaders-page",
   "private": true,
   "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
@@ -38,6 +34,5 @@
     "watch": "webpack --watch",
     "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders --metadata-directive REPLACE --acl public-read --cache-control max-age=604800,public",
     "pug:watch": "pug -w ./src/pug -o ./src/pug -P"
-
   }
 }
