--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build:dev": "webpack",
     "build:release": "webpack --env.release",
     "build": "npm run build:dev",
-    "start": "webpack-dev-server --open 127.0.0.1:3000",
+    "start": "webpack-dev-server",
     "watch": "webpack --watch",
     "deploy": "npm run build:release && aws s3 sync dist s3://crashinvaders.com/ --profile crashinvaders --metadata-directive REPLACE --acl public-read --cache-control max-age=604800,public",
     "pug:watch": "pug -w ./src/pug -o ./src/pug -P"
