--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "open-cli": "^6.0.1",
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
     "sass": "^1.26.10",
@@ -20,12 +21,12 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "open-cli": "^6.0.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@types/aos": "^3.0.3",
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "jstransformer-uglify-js": "^1.2.0"
   },
   "scripts": {
     "build:dev": "webpack",
