--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "jstransformer-uglify-js": "^1.2.0",
     "mini-css-extract-plugin": "^0.10.0",
     "open-cli": "^6.0.1",
     "pug": "^3.0.0",
@@ -25,8 +26,7 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.3",
-    "aos": "^2.3.4",
-    "jstransformer-uglify-js": "^1.2.0"
+    "aos": "^2.3.4"
   },
   "scripts": {
     "build:dev": "webpack",
